--- a/client/src/components/addActivity/AddActivity.module.css
+++ b/client/src/components/addActivity/AddActivity.module.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    color:#252c27 ;
+    color:#151615 ;
     font-weight: bold;
 }
 
@@ -32,6 +32,7 @@
     background-color: rgb(138, 233, 100);
     box-shadow: -2px 2px 104px 12px rgb(247, 202, 4);
     z-index:10;
+    border-radius: 15px;
 }
 
 .title{
@@ -50,7 +51,7 @@
 }
 
 .formSection:last-of-type{
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .input{
@@ -67,6 +68,7 @@
     border:2px solid rgb(57, 187, 6);
     line-height: 2rem;
     font-size: 1rem;
+    border-radius: 8px;
 }
 
 .add{
@@ -76,13 +78,13 @@
     border:2px solid rgb(57, 187, 6);
     line-height: 2rem;
     font-size: 1rem;
+    border-radius: 8px;
 }
 
 .add:hover,
 .btnBack:hover{
     cursor:pointer;
     background-color:rgb(218, 241, 10);
-    border:rgb(220, 7, 240);
     color: black
 }
 
@@ -95,9 +97,9 @@ ul{
     padding: 5px;
 }
 .label{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
     display: inline-block;
-    width: 150px;
+    width: 140px;
 }
 body{
     background-color: black;
