--- a/client/src/components/addActivity/AddActivity.module.css
+++ b/client/src/components/addActivity/AddActivity.module.css
@@ -39,7 +39,7 @@
    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-top: 0;
     margin-bottom: 4vh;
-    margin-left:60px;
+    margin-left:130px;
 }
 
 .formSection{
@@ -69,6 +69,7 @@
     line-height: 2rem;
     font-size: 1rem;
     border-radius: 8px;
+    margin-bottom: 20px;
 }
 
 .add{
