--- a/client/src/components/cardCountry/CardCountry.module.css
+++ b/client/src/components/cardCountry/CardCountry.module.css
@@ -37,16 +37,20 @@
     text-decoration: underline;
   }
   .country {
-    font-size: 30px;
+    font-size: 22px;
     color:rgb(37, 31, 3);
     margin-bottom: 0;
+    justify-items: center;
   }
   
   .continents {
     font-size: 15px;
     margin-top: 20px;
-    color: rgb(15, 12, 182);;
+    color: darkblue
   }
-  
+  .population{
+    font-size: 15px;
+    color:darkblue
+  }
   
   
