--- a/client/src/components/addActivity/AddActivity.module.css
+++ b/client/src/components/addActivity/AddActivity.module.css
@@ -1,11 +1,11 @@
 *{
     box-sizing: border-box;
-    color:#151615 ;
-    font-weight: bold;
+     color:#151615 ;
+    font-weight: bold; 
 }
 
 .container{
-    height:100vh;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -13,53 +13,58 @@
     background-size: cover;
 }
 
-/* .container::before{
-    content: '';
-    position: absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(59, 223, 10);
-    z-index:0;
-    border-bottom: 2px solid blue;
-} */
 
 .card{
-    display: flex;
-    flex-direction: column;
-    padding: 5vh 2vh;
-    background-color: rgb(138, 233, 100);
+    display: grid;
+    grid-template-columns: 1fr ;
+    gap:15px;
+    padding: 1vh 3vh;
+    background-color: rgb(220, 228, 173);
     box-shadow: -2px 2px 104px 12px rgb(247, 202, 4);
-    z-index:10;
+    z-index:5;
     border-radius: 15px;
+    width: 50%;
+  
+
 }
 
 .title{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 0;
-    margin-bottom: 4vh;
-    margin-left:130px;
+   justify-content: center;
+    padding:8px;
+    margin-top: 12px;
+    margin-bottom: 2vh;
+    margin-left:180px;
+    color:rgb(64, 146, 31)
 }
 
 .formSection{
     width: 100%;
-    display: flex;
-    align-items: baseline;
-    margin: 10px 0;
-    text-align:justify;
+    display: grid;
+    grid-template-rows: max-content;
+    align-items:center;
+    margin: 5px;
+    text-align:left;
 }
 
 .formSection:last-of-type{
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .input{
-    display:inline-block;
-    width: 200px;
-    margin: 10px;
+    display:inline-table;
+    width: 30px;
+    margin: 12px;
     padding: 5px;
+    text-transform: capitalize;
+    
 }
+
+
+.danger{
+    border: 2px solid crimson;
+}
+    
 
 .btnBack{
     width: 50%;
@@ -69,11 +74,12 @@
     line-height: 2rem;
     font-size: 1rem;
     border-radius: 8px;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 .add{
-    width: 50%;
+    width:50%;
     color:rgb(10, 10, 10);
     background-color: rgb(231, 192, 64);
     border:2px solid rgb(57, 187, 6);
@@ -92,16 +98,30 @@
 ul{
     list-style: none;
     display: inline;
+    margin-left: 40px;
 }
 .select{
-    margin: 10px;
+    margin: 12px;
     padding: 5px;
+    display: inline-table;
+    width: 30px;
+    
 }
 .label{
-    
-    display: inline-block;
-    width: 140px;
+    display: flex;
+    font-weight: 600;
+    width: 180px;
+    padding:10px;
+    min-height: 40px;
+    cursor:pointer;
 }
 body{
     background-color: black;
+}
+
+p.danger{
+    color: crimson;
+    font-size: 15px;
+    justify-content: baseline;
+    display: inline;
 }
