--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -47,7 +47,7 @@
   .ul{
     display: flex;
     justify-content: center;
-    background-color: rgb(45, 206, 13);
+    background-color: rgb(113, 228, 90);
   }
   
   .filterContainer{
@@ -65,13 +65,15 @@
 } 
 .btnPage{
   background-color: #f1e8bf;
-  border: 1px solid #9fbb7a;
+  border: 2px solid #9fbb7a;
+ justify-content: center;
+ font-size: 15px;
 }
 .btnPage:hover {
   cursor: pointer;
   background-color: #f7d722;
   color: #362c18;
-  border: 2px solid #f0a309;
+  border: 1px solid #f0a309;
 }
 
 
