--- a/client/src/components/landingPAge/LandingPage.module.css
+++ b/client/src/components/landingPAge/LandingPage.module.css
@@ -7,8 +7,7 @@
 .container{
     height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-image: url('../../images/mapamundi.jpg');
     background-size: cover;
