--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     min-height: 200vh; 
-    background-color: #131212;
+    background-color: hsl(0, 0%, 3%);
     padding: 0;
   }
   
@@ -15,11 +15,11 @@
     justify-content: center;
     background-color: #121312;
     margin-bottom: 5vh;
-    padding: 5vh 0;
+    padding: 5vh;
   }
   
   .btnContainer {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +31,7 @@
     width: 50%;
     background-color: #ecc309;
     border: 1px solid #9af81e;
-    line-height: 2rem;
+    
     font-size: 1rem;
   }
   
@@ -48,6 +48,8 @@
     display: flex;
     justify-content: center;
     background-color: rgb(113, 228, 90);
+    
+    
   }
   
   .filterContainer{
@@ -68,6 +70,7 @@
   border: 2px solid #9fbb7a;
  justify-content: center;
  font-size: 15px;
+ 
 }
 .btnPage:hover {
   cursor: pointer;
